$Id$

1.12.1 24/07/2006

Added <xmlcatalog> error message

1.12 18/05/2006

Added expandProperties attribute to <insert> and <replace>
The <call> mechanism now supports embedded actions i.e. you
don't have to call out to a subtarget. Thanks to Maarten Coene

1.11.4 22/03/2006

Now handles IBM JVM and related classloading issues

1.11.3 16/02/2006

Changes to cope with JDK 1.6 beta

1.11.2 30/01/2006

Reversed ordering of element insertion from buffers. Now intuitive

1.11.1b 23/08/2005

Now allows expansion of entity references to be enabled/disabled (tests 40/99)

1.11.1 09/08/2005

Now handles an <xmltask> invocation without source or dest (test 98)

1.11 30/06/2005

New web page
Now uses java.version to identify VM and thus XPath usage
Errors when inserting before/after root nodes
Fixed source packaging wrt. XMLCatalog.class
Fixed possible infinite loop in insert statement
Added 'destbuffer' to permit in-buffer XML manipulation
Added <print> capability
Added default="" to the <call> <param> statements

1.10.7 24/05/2005

Fix for empty filesets

1.10.6 29/04/2005

Added a fix for properties being reset inbetween <call>s. See test/scripts/build-93.xml

1.10.5 29/10/2004

Added xmltask.path and xmltask.fqpath properties to the property set when
calling stuff via <call>

1.10.4 29/10/2004

Reduced default log output

1.10.4 11/10/2004

omitHeader capability
standalone header capability

1.10.3 31/08/2004

Cut/copy to properties now works with comment text

1.10.2 (no version change) 19/08/2004

Doc changes and enabled mailing list info. MD5 checksums on the web page

1.10.2 11/06/2004

<call> params can now take properties or static strings rather than just XPath expressions
Subtargets failure (in targets called by <call>) is propogated through <xmltask>
Filed fileset bug wrt. calling xmltask twice in the same build

Fixed jdk 1.3 incompatibility
1.10.1 18/05/2004

Fixed jdk 1.3 incompatibility

1.10  11/04/2004

<fileset> capability implemented

1.9.2 18/03/2004
