@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<a>
+  <b attr="n1" id="new id">Number 1</b>
+</a>
